--- a/manifest/etc/services.d/php/php-fpm.conf.tmpl
+++ b/manifest/etc/services.d/php/php-fpm.conf.tmpl
@@ -1,6 +1,6 @@
 [global]
 daemonize = no
-error_log = /dev/stderr
+error_log = /proc/self/fd/2
 
 [www]
 listen.owner = phpapp
@@ -15,3 +15,4 @@ pm.min_spare_servers = 1
 pm.max_spare_servers = 3
 
 clear_env = no
+catch_workers_output = yes
