change error log again

--- a/manifest/etc/services.d/php/php.ini.tmpl
+++ b/manifest/etc/services.d/php/php.ini.tmpl
@@ -12,6 +12,7 @@ log_errors = On
 display_errors = Off
 register_argc_argv = Off
 enable_dl = Off
+error_log = /dev/stderr
 
 [Date]
 date.timezone = ${TZ}
